--- a/1.html
+++ b/1.html
@@ -12,8 +12,8 @@
         <li><a href="2.html">CSS</a></li>
         <li><a href="3.html">JavaScript</a></li>
     </ol>
-    <li>손정민</li>
-    <li>sjm</li>
+    <li><h2>손정민</h2></li>
+    <li><h3>sjm</h3></li>
     <li>jmson</li>
     <li>jmsonjungmin-GIT</li>
     <H2>HTML이란 무엇인가?</H2>
